--- a/portfolio.css
+++ b/portfolio.css
@@ -1,4 +1,4 @@
-* {
+ter* {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -12,7 +12,7 @@
       header {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
         background: #FFCC80;
         height: 110px;
