--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@
       header {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
         background: #FFCC80;
         height: 110px;
