--- a/portfolio.css
+++ b/portfolio.css
@@ -11,7 +11,7 @@
 
       header {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         justify-content: center;
         align-items: center;
         background: #FFCC80;
