--- a/portfolio2.css
+++ b/portfolio2.css
@@ -188,6 +188,15 @@
        
         
       }
+
+           @keyframes bounce {
+                0% {
+                    transform: translateX(0);
+                }
+                100% {
+                    transform: translateX(50px); 
+                }
+            }
       @media only screen and (max-width: 800px){
       	table{
         	display: none;
